--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0023)http://buysf.rf.gd/?i=1 -->
+<!-- saved from url=(0023)https://hj7r.github.io/hg0/ -->
 <html data-bs-theme="light" lang="en" style="font-family: Cairo, sans-serif;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
